@@ -133,4 +133,25 @@
 </TABLE>
 </P>
 {/if}
-																						
+{if $customer}
+<P>
+<TABLE WIDTH="100%" CELLPADDING="3">
+	<TR CLASS="dark">
+		<TD CLASS="fleftu" WIDTH="1%" nowrap>
+			<IMG SRC="img/customer.gif" ALT=""> <B>{t}Customer:{/t}</B>
+		</TD>
+		<TD CLASS="fbt" WIDTH="1%" nowrap>
+			<B>{$customer.customername}</B> 
+			&nbsp;&raquo;&nbsp; {$customer.address} &nbsp; {$customer.zip} {$customer.city}
+			{if $customer.phone1}&nbsp;&raquo;&nbsp; {$customer.phone1}{/if}
+			&nbsp;&raquo;&nbsp; {if $customer.balance < 0}<FONT class="red">{/if}{$customer.balance|money_format}{if $customer.balance < 0}</FONT>{/if}
+		</TD>
+		<TD CLASS="frightu" WIDTH="98%" align="right">
+			{if $customer.groups}<FONT class="red bold">
+			({foreach from=$customer.groups item=item name=groups}{$item.name}{if $smarty.foreach.groups.iteration < sizeof($customer.groups)}, {/if}{/foreach})
+			</FONT>{/if}
+		</TD>
+	</TR>
+</TABLE>
+</P>
+{/if}
