@@ -16,6 +16,7 @@ version ? (????-??-??):
   - helpdesk: new note/message e-mail notification on demand (alec)
   - helpdesk: simplified tickets resolving - now is possible to resolve tickets
     with cause setting while new message/note addition (alec)
+  - helpdesk: added customer info in ticket view (alec)
   - lms-payments, lmsd/payments: fixed problem with discounts invoicing (alec)
   - traffic filter: we can filtering stats by customer (chilek)
   - added index customerid on table documents (alec)
